chore: add lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,7 @@
         "modules/*",
         "solutions/*"
     ],
-    "version": "independent"
+    "version": "independent",
+    "ignoreChanges": ["**/__fixtures__/**", "**/__tests__/**", "**/*.md"]
+
 }
