feature: update automation account

--- a/modules/automationaccount/package.json
+++ b/modules/automationaccount/package.json
@@ -1,12 +1,17 @@
 {
     "name": "automationaccount",
     "version": "1.0.0",
-    "description": "azure automation account",
-    "keywords": [
-        "bicep",
-        "azure",
-        "automation account"
-    ],
+    "description": "automation account",
     "author": "Stijn Callebaut <stijn.callebaut@outlook.be>",
-    "homepage": ""
+    "homepage": "https://github.com/Stijnc/sca.lerna#readme",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Stijnc/sca.lerna.git"
+    },
+    "scripts": {
+        "test": "echo \"Error: run tests from root\" && exit 1"
+    },
+    "bugs": {
+        "url": "https://github.com/Stijnc/sca.lerna/issues"
+    }
 }
