--- a/modules/automationaccount/package.json
+++ b/modules/automationaccount/package.json
@@ -9,7 +9,9 @@
         "url": "git+https://github.com/Stijnc/sca.lerna.git"
     },
     "scripts": {
-        "test": "echo \"Error: run tests from root\" && exit 1"
+        "test": "echo \"Error: run tests from root\" && exit 1",
+        "build": "bash ../../scripts/build.sh",
+        "build-pwsh": "pwsh ../../scripts/build.ps1"
     },
     "bugs": {
         "url": "https://github.com/Stijnc/sca.lerna/issues"
