chore: add package.json

--- a/modules/automationaccount/package.json
+++ b/modules/automationaccount/package.json
@@ -1,19 +1,13 @@
 {
     "name": "automationaccount",
-    "version": "1.0.0",
-    "description": "automation account",
+    "version": "0.0.1",
+    "description": "azure automation account",
+    "keywords": [
+        "bicep",
+        "azure",
+        "log analytics",
+        "automation account"
+    ],
     "author": "Stijn Callebaut <stijn.callebaut@outlook.be>",
-    "homepage": "https://github.com/Stijnc/sca.lerna#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Stijnc/sca.lerna.git"
-    },
-    "scripts": {
-        "test": "echo \"Error: run tests from root\" && exit 1",
-        "build": "bash ../../scripts/build.sh",
-        "build-pwsh": "pwsh ../../scripts/build.ps1"
-    },
-    "bugs": {
-        "url": "https://github.com/Stijnc/sca.lerna/issues"
-    }
+    "homepage": ""
 }
