--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ on:
       - development
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   publish:
     if: github.event.pull_request.merged == true
