--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: 'Az CLI login'
       uses: azure/login@v1
       with:
@@ -45,7 +47,7 @@ jobs:
 
         #version the packages
         if ("${{ github.base_ref }}" -eq 'development') {
-          lerna version --conventional-commits --conventional-prerelease --preid beta --yes
+          lerna version --conventional-commits --conventional-prerelease --preid beta --yes 
         }
         else {
           lerna version --conventional-commits --conventional-graduate --yes
