chore: update pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,10 +47,10 @@ jobs:
 
         #version the packages
         if ("${{ github.base_ref }}" -eq 'development') {
-          lerna version --conventional-commits --conventional-prerelease --preid beta --yes 
+          lerna version --conventional-commits --conventional-prerelease --preid beta --yes --no-git-tag-version
         }
         else {
-          lerna version --conventional-commits --conventional-graduate --yes
+          lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version
         }
 
         #publish the packages
