--- a/modules/containerRegistry/package.json
+++ b/modules/containerRegistry/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "containeregistry",
+    "name": "containerregistry",
     "version": "1.1.0",
     "description": "azure container registry ",
     "keywords": [
