--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,6 @@ jobs:
 
         #get all changed files
         $changedFiles = lerna changed
-        $changedFiles
 
         #version the packages
         if ("${{ github.base_ref }}" -eq 'development') {
@@ -58,11 +57,10 @@ jobs:
         }
 
         #publish the packages
-        $PackageList = $null; 
-        $PackageList +=  $changedFiles | 
-          % { ConvertFrom-Json $(get-content  $(Join-Path -Path "modules" -ChildPath $(Join-Path -Path $_ -ChildPath "package.json")) -raw ) }
+        $PackageList = $null;
+        Write-output "publishing"
+        $PackageList +=  $changedFiles | % { ConvertFrom-Json $(get-content  $(Join-Path -Path "modules" -ChildPath $(Join-Path -Path $_ -ChildPath "package.json")) -raw ) }
 
-        $PackageList | 
-          % {az bicep publish $("modules/{0}/{0}.bicep"-f $_.name) --target $("br:{0}/bicep/modules/{1}:v{2}" -f "scabicep.azurecr.io", $_.name, $_.version) }
+        $PackageList | % {az bicep publish $("modules/{0}/{0}.bicep"-f $_.name) --target $("br:{0}/bicep/modules/{1}:v{2}" -f "scabicep.azurecr.io", $_.name, $_.version) }
 
         
