chore: update pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,11 +52,12 @@ jobs:
 
         #version the packages
         if ("${{ github.base_ref }}" -eq 'development') {
-          lerna version --conventional-commits --conventional-prerelease --preid beta --yes
+          lerna version --conventional-commits --conventional-prerelease --preid beta --yes --no-git-tag-version
         }
         else {
-          lerna version --conventional-commits --conventional-graduate --yes
+          lerna version --conventional-commits --conventional-graduate --yes --no-git-tag-version
         }
+        git commit --allow-empty -m "[skip ci] creating release"
 
         #publish the packages
         $PackageList = $null;
