--- a/modules/storageaccount/package.json
+++ b/modules/storageaccount/package.json
@@ -1,6 +1,6 @@
 {
     "name": "storageaccount",
-    "version": "1.0.2-beta.0",
+    "version": "1.0.2",
     "description": "azure storage account ",
     "keywords": [
         "bicep",
