--- a/modules/containerregistry/package.json
+++ b/modules/containerregistry/package.json
@@ -1,6 +1,6 @@
 {
     "name": "containerregistry",
-    "version": "1.2.0-beta.0",
+    "version": "1.2.0",
     "description": "azure container registry ",
     "keywords": [
         "bicep",
