--- a/modules/hellomasterclass/package.json
+++ b/modules/hellomasterclass/package.json
@@ -3,5 +3,5 @@
     "version": "0.0.1",
     "description": "hello masterclass",
     "author": "Stijn Callebaut <stijn.callebaut@outlook.be>",
-    "homepage": "https://github.com/Stijnc/sca.lerna#readme",
+    "homepage": "https://github.com/Stijnc/sca.lerna#readme"
 }
