--- a/modules/hellomasterclass/package.json
+++ b/modules/hellomasterclass/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hellomasterclass",
-    "version": "0.0.1",
+    "version": "0.1.0-beta.0",
     "description": "hello masterclass",
     "author": "Stijn Callebaut <stijn.callebaut@outlook.be>",
     "homepage": "https://github.com/Stijnc/sca.lerna#readme"
