--- a/modules/helloworld/package.json
+++ b/modules/helloworld/package.json
@@ -1,6 +1,6 @@
 {
     "name": "helloworld",
-    "version": "1.0.2",
+    "version": "1.0.3-beta.0",
     "description": "hello world",
     "author": "Stijn Callebaut <stijn.callebaut@outlook.be>",
     "homepage": "https://github.com/Stijnc/sca.lerna#readme",
